# wp-theme-studio

lib/: README.md  package.json
vendors/elementor/: jwt.json  package.json  php.ini  run.sh  test.db  todo  vscode.code-workspace
vendors/elementor/plugins/: loader.php
vendors/elementor/plugins/elementor-pro/: elementor-pro.php
vendors/elementor/plugins/wp-elementor-studio/: customizer.php  export.php  package.json  setup.php  wp-elementor-studio.php
vendors/elementor/public/: index.html
vendors/elementor/src/: App.svelte  i18n.js  index.html  main.js  routes.js
vendors/elementor/src-tauri/: Cargo.toml  tauri.conf.json
vendors/elementor/src-tauri/icons/: icon.icns
vendors/elementor/src-tauri/src/: cmd.rs  main.rs  types.rs  utils.rs
vendors/elementor/src-tauri/src/templates/: wp-config.php
vendors/elementor/src-tauri/src/utils/: auth.rs  http.rs  path.rs  tcp.rs  theme.rs
vendors/elementor/src/components/: ButtonCreate.svelte  Input.svelte  Menu.svelte
vendors/elementor/src/stores/: jwt.js
vendors/elementor/src/styles/: bulma.scss  icons.scss  index.scss
vendors/elementor/src/utils/: auth.js  booleans.js  execute.js  exportTheme.js  list.js  templates.js  theme.js
vendors/elementor/src/views/: Home.svelte  Login.svelte  ThemeManagement.svelte  Themes.svelte
vendors/elementor/test1/database/: .ht.sqlite
vendors/elementor/theme-data/: themes.json
vendors/elementor/theme-data/uuid/: db.php
vendors/elementor/wp-content/database/: .ht.sqlite
vendors/elementor/wp-content/languages/: admin-fr_FR.mo  admin-fr_FR.po  (+1 more)
(+15 files in other folders)
