[package]
name = "wp-elementor-studio"
version = "0.1.0"
description = "WP Elementor Studio"
authors = [ "you" ]
license = ""
repository = ""
default-run = "wp-elementor-studio"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.5.2", git = "https://github.com/tauri-apps/tauri", features = [ "all-api", "edge" ] }
zip = "0.5.5"
fs_extra = "1.1.0"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "wp-elementor-studio"
path = "src/main.rs"
